// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ApplyPage default 1`] = `
<div
  className="mn"
>
  <div
    className="b b-c"
  >
    <div
      className="sh"
    >
      <h2
        className="sh-title"
      >
        Commissions Page Scaffold
      </h2>
    </div>
    <form
      action="javascript:void(0)"
      className="m-t700"
      method="POST"
    >
      <fieldset
        className="fs m-v700"
      >
        <legend
          className="fs-l"
        >
          Application Information
        </legend>
        <div
          className="fs"
        >
          <div
            className="fs-c"
          >
            <div
              className="txt m-b300"
            >
              <label
                className="txt-l txt-l--sm"
                htmlFor="FeedbackForm-\${this.props.name}"
              >
                First Name
                <span
                  aria-hidden="true"
                  className="t--req"
                >
                   
                  Required
                </span>
              </label>
              <input
                className="txt-f txt-f--sm"
                id="FeedbackForm-\${this.props.name}"
                name="firstName"
                placeholder="First Name"
                required={true}
                type="text"
              />
            </div>
            <div
              className="txt m-b300"
            >
              <label
                className="txt-l txt-l--sm"
                htmlFor="FeedbackForm-\${this.props.name}"
              >
                Middle Name
                <span
                  aria-hidden="true"
                  className="t--req"
                >
                   
                  Required
                </span>
              </label>
              <input
                className="txt-f txt-f--sm"
                id="FeedbackForm-\${this.props.name}"
                name="middleName"
                placeholder="Middle Name"
                required={true}
                type="text"
              />
            </div>
            <div
              className="txt m-b300"
            >
              <label
                className="txt-l txt-l--sm"
                htmlFor="FeedbackForm-\${this.props.name}"
              >
                Last Name
                <span
                  aria-hidden="true"
                  className="t--req"
                >
                   
                  Required
                </span>
              </label>
              <input
                className="txt-f txt-f--sm"
                id="FeedbackForm-\${this.props.name}"
                name="lastName"
                placeholder="Last Name"
                required={true}
                type="text"
              />
            </div>
            <div
              className="txt m-b300"
            >
              <label
                className="txt-l txt-l--sm"
                htmlFor="FeedbackForm-\${this.props.name}"
              >
                Address
                <span
                  aria-hidden="true"
                  className="t--req"
                >
                   
                  Required
                </span>
              </label>
              <input
                className="txt-f txt-f--sm"
                id="FeedbackForm-\${this.props.name}"
                name="address"
                placeholder="Address"
                required={true}
                type="text"
              />
            </div>
            <div
              className="txt m-b300"
            >
              <label
                className="txt-l txt-l--sm"
                htmlFor="FeedbackForm-\${this.props.name}"
              >
                Unit
                <span
                  aria-hidden="true"
                  className="t--req"
                >
                   
                  Required
                </span>
              </label>
              <input
                className="txt-f txt-f--sm"
                id="FeedbackForm-\${this.props.name}"
                name="unit"
                placeholder="Unit or Apartment # "
                required={true}
                type="text"
              />
            </div>
            <div
              className="txt m-b300"
            >
              <label
                className="txt-l txt-l--sm"
                htmlFor="FeedbackForm-\${this.props.name}"
              >
                City
                <span
                  aria-hidden="true"
                  className="t--req"
                >
                   
                  Required
                </span>
              </label>
              <input
                className="txt-f txt-f--sm"
                id="FeedbackForm-\${this.props.name}"
                name="city"
                placeholder="City"
                required={true}
                type="text"
              />
            </div>
            <div
              className="txt m-b300"
            >
              <label
                className="txt-l txt-l--sm"
                htmlFor="FeedbackForm-\${this.props.name}"
              >
                State
                <span
                  aria-hidden="true"
                  className="t--req"
                >
                   
                  Required
                </span>
              </label>
              <input
                className="txt-f txt-f--sm"
                id="FeedbackForm-\${this.props.name}"
                name="state"
                placeholder="State"
                required={true}
                type="text"
              />
            </div>
            <div
              className="txt m-b300"
            >
              <label
                className="txt-l txt-l--sm"
                htmlFor="FeedbackForm-\${this.props.name}"
              >
                Zip
                <span
                  aria-hidden="true"
                  className="t--req"
                >
                   
                  Required
                </span>
              </label>
              <input
                className="txt-f txt-f--sm"
                id="FeedbackForm-\${this.props.name}"
                name="zip"
                placeholder="Zip Code"
                required={true}
                type="text"
              />
            </div>
            <div
              className="txt m-b300"
            >
              <label
                className="txt-l txt-l--sm"
                htmlFor="FeedbackForm-\${this.props.name}"
              >
                Phone
                <span
                  aria-hidden="true"
                  className="t--req"
                >
                   
                  Required
                </span>
              </label>
              <input
                className="txt-f txt-f--sm"
                id="FeedbackForm-\${this.props.name}"
                name="phone"
                placeholder="Phone Number"
                required={true}
                type="text"
              />
            </div>
            <div
              className="txt m-b300"
            >
              <label
                className="txt-l txt-l--sm"
                htmlFor="FeedbackForm-\${this.props.name}"
              >
                Email
                <span
                  aria-hidden="true"
                  className="t--req"
                >
                   
                  Required
                </span>
              </label>
              <input
                className="txt-f txt-f--sm"
                id="FeedbackForm-\${this.props.name}"
                name="email"
                placeholder="Email "
                required={true}
                type="text"
              />
            </div>
            <div
              className="txt m-b300"
            >
              <label
                className="txt-l txt-l--sm"
                htmlFor="FeedbackForm-\${this.props.name}"
              >
                Confirm Email
                <span
                  aria-hidden="true"
                  className="t--req"
                >
                   
                  Required
                </span>
              </label>
              <input
                className="txt-f txt-f--sm"
                id="FeedbackForm-\${this.props.name}"
                name="Confirm Email"
                placeholder="Confirm Email"
                required={true}
                type="text"
              />
            </div>
          </div>
          <div
            className="bc bc--r p-t500"
          >
            <button
              className="btn btn--700"
              onSubmit={[Function]}
              type="submit"
            >
              Send Message
            </button>
          </div>
        </div>
      </fieldset>
    </form>
    <ul />
  </div>
</div>
`;

exports[`Storyshots TextInput default 1`] = `
<div
  className="txt m-b300"
>
  <label
    className="txt-l txt-l--sm"
    htmlFor="FeedbackForm-\${this.props.name}"
  >
    First Name
  </label>
  <input
    className="txt-f txt-f--sm"
    id="FeedbackForm-\${this.props.name}"
    name="firstName"
    placeholder="First Name"
    required={undefined}
    type="text"
  />
</div>
`;

exports[`Storyshots TextInput required 1`] = `
<div
  className="txt m-b300"
>
  <label
    className="txt-l txt-l--sm"
    htmlFor="FeedbackForm-\${this.props.name}"
  >
    First Name
    <span
      aria-hidden="true"
      className="t--req"
    >
       
      Required
    </span>
  </label>
  <input
    className="txt-f txt-f--sm"
    id="FeedbackForm-\${this.props.name}"
    name="firstName"
    placeholder="First Name"
    required={true}
    type="text"
  />
</div>
`;
